--- a/src/app.css
+++ b/src/app.css
@@ -18,17 +18,18 @@ body {
 
 body {
 	font-family: 'Poppins';
-	background-image: radial-gradient(at 0% 0%, rgba(37, 99, 235, 0.25) 0px, transparent 50%),
-		radial-gradient(at 98% 1%, rgba(37, 99, 235, 0.25) 0px, transparent 50%);
+	background-image: radial-gradient(at 0% 0%, rgba(37, 99, 235, 0.2) 0px, transparent 50%),
+		radial-gradient(at 98% 1%, rgba(37, 99, 235, 0.2) 0px, transparent 50%);
 	background-attachment: fixed;
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
+	overflow-x: hidden;
 }
 
 svg {
-	width: 90%;
-	height: 90%;
+	width: 100%;
+	height: 100%;
 }
 
 p {
